2003-06-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/timer_settime.c: Add prototype for
	compat_timer_settime.
	* sysdeps/unix/sysv/linux/timer_gettime.c: Add prototype for
	compat_timer_gettime.
	* sysdeps/unix/sysv/linux/timer_getoverr.c: Add prototype for
	compat_timer_getoverrun.o
	* sysdeps/unix/sysv/linux/timer_delete.c: Add prototype for
	compat_timer_delete.

	* pthread_mutex_destroy.c (__pthread_mutex_destroy): For
	error-checking mutex detect busy mutexes.

2003-06-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h (lll_mutex_lock):
	Add ax to clobber list.
	(lll_mutex_cond_lock): Likewise.
	(lll_mutex_unlock): Likewise.
	(lll_lock): Likewise.
	(lll_unlock): Likewise.

	* Makefile: Add rules to build and run tst-cancel18 and tst-cancelx18.
	* tst-cancel18.c: New file.
	* tst-cancelx18.c: New file.

	* tst-cancel4.c: Test connect, creat, msgrcv, msgsnd, sendmsg, sendto,
	and tcdrain.

	* Makefile: Add rules to build and run tst-cancel17 and tst-cancel17x.
	* tst-cancel17.c: New file.
	* tst-cancelx17.c: New file.

	* sysdeps/unix/sysv/linux/sigtimedwait.c: New file.
	* sysdeps/unix/sysv/linux/sigwait.c: New file.
	* sysdeps/unix/sysv/linux/sigwaitinfo.c: New file.

	* tst-cancel4.c: Test open, close, pread, pwrite, fsync, and msync.

2003-06-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/createthread.c (create_thread): Set
	header.multiple_threads unconditionally.
	* allocatestack.c (allocate_stack): Likewise.
	* descr.h (struct pthread): Add header.multiple_threads
	unconditionally.
	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h (CENABLE, CDISABLE):
	Define for librt.  #error if neither libpthread, libc nor librt.
	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (CENABLE, CDISABLE):
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h (CENABLE,
	CDISABLE): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h (CENABLE,
	CDISABLE): Likewise.